Add PUT /inputs and ability to change inputs
