# app/routes/inputs/index.js
@@ -1,11 +1,13 @@
 const inputs = require('express').Router();
 const all = require('./all');
-const single = require('./single');
+const singleGet = require('./singleGet');
+const singlePut = require('./singlePut');
 const active = require('./active');
 const preview = require('./preview');
 
 inputs.get('/', all);
-inputs.get('/:inputId([0-9]*)', single);
+inputs.get('/:inputId([0-9]*)', singleGet);
+inputs.put('/:inputId([0-9]*)', singlePut);
 inputs.get('/active', active);
 inputs.get('/preview', preview);
 
